--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "latest",
+    "next-usequerystate": "^1.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-use": "^17.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "17.8.0",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwindcss": "^3.0.7",
+    "typescript": "4.5.4"
   }
 }
