--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^0.26.1",
     "next": "latest",
     "next-usequerystate": "^1.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "17.8.0",
-    "@types/react": "17.0.38",
+    "@types/node": "18.11.0",
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.8.4"
   }
 }
